v0.3.0/_sources/projections/misc/misc_mollweide.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_mollweide.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_misc_misc_mollweide.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_mollweide.py:


Mollweide
=========

This pseudo-cylindrical, equal-area projection was developed by the German
mathematician and astronomer Karl Brandan Mollweide in 1805. Parallels are unequally
spaced straight lines with the meridians being equally spaced elliptical arcs. The
scale is only true along latitudes 40°44’ north and south. The projection is used
mainly for global maps showing data distributions. It is occasionally referenced under
the name homalographic projection.

**w**\ [*lon0/*]\ *scale* or **W**\ [*lon0/*]\ *width*

The projection is set with **w** or **W**. The central meridian is set with the
optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 17-23



.. image:: /projections/misc/images/sphx_glr_misc_mollweide_001.png
    :alt: misc mollweide
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(region="d", projection="W12c", land="tomato1", water="skyblue", frame="ag")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.169 seconds)


.. _sphx_glr_download_projections_misc_misc_mollweide.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: misc_mollweide.py <misc_mollweide.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: misc_mollweide.ipynb <misc_mollweide.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
